@@ -1,17 +1,16 @@
 package ro.siit.HRS.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ro.siit.HRS.dto.rturn.EmployeeReturnDto;
 import ro.siit.HRS.model.Employee;
 import ro.siit.HRS.model.Manager;
 import ro.siit.HRS.repository.EmployeeRepository;
 import ro.siit.HRS.repository.ManagerRepository;
+import ro.siit.HRS.util.MapperUtil;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,22 +18,22 @@ public class AdminService {
 
     private final EmployeeRepository employeeRepository;
     private final ManagerRepository managerRepository;
-    private final EmployeeService employeeService;
+    private final MapperUtil mapperUtil;
 
     public List<EmployeeReturnDto> getAllEmployees() {
 
         List<EmployeeReturnDto> allEmployees = new ArrayList<>();
 
-        List<EmployeeReturnDto> employeeReturnDtoList = new ArrayList<>();
-        List<EmployeeReturnDto> employeeReturnDtoListFromManager = new ArrayList<>();
+        List<EmployeeReturnDto> employeeReturnDtoList;
+        List<EmployeeReturnDto> employeeReturnDtoListFromManager;
 
         List<Employee> employeeList = employeeRepository.findAll();
         List<Manager> managerList = managerRepository.findAll();
 
         employeeReturnDtoList = employeeList.stream()
-                .map(employee -> employeeService.mapEmployee(employee)).collect(Collectors.toList());
+                .map(mapperUtil::mapEmployee).toList();
         employeeReturnDtoListFromManager = managerList.stream()
-                .map(manager -> employeeService.mapManagerToEmployeeReturnDto(manager)).collect(Collectors.toList());
+                .map(mapperUtil::mapManagerToEmployeeReturnDto).toList();
 
         allEmployees.addAll(employeeReturnDtoList);
         allEmployees.addAll(employeeReturnDtoListFromManager);
